change mysql-connector to mysql-connector-c++-1.1.12

--- a/src/clause/config/server/cmd.flags.sample
+++ b/src/clause/config/server/cmd.flags.sample
@@ -1,14 +1,16 @@
 --tryfromenv=server_port,server_threads,mysql_uri,mysql_user,mysql_pass,activemq_broker_uri,activemq_client_ack,workarea,data,redis_host,redis_port,redis_db,redis_pass,sysdicts_host,sysdicts_port
 --server_port=8056
 --server_threads=20
---mysql_uri=tcp://127.0.0.1:8055/clause
+--mysql_uri=tcp://127.0.0.1:3306/clause
 --mysql_user=root
---mysql_pass=123456
+--mysql_pass=root
 --workarea=../../../../var/local/workarea
 --data=../../../../var/local/data
---redis_host=redis
+--redis_host=127.0.0.1
 --redis_port=6379
 --redis_db=5
---redis_pass=pass
+--redis_pass=redis
 --sysdicts_host=127.0.0.1
 --sysdicts_port=8066
+--activemq_broker_uri=tcp://127.0.0.1:61616
+
